Closed Bug 1664661 Opened 5 years ago Closed 5 years ago

New desktop zooming scrollbars at wrong position when pinch zoomed overflow hidden and layout scroll offset isn't 0

Categories

(Core :: Layout: Scrolling and Overflow, defect)

defect

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
firefox82 --- fixed

People

(Reporter: tnikkel, Assigned: tnikkel)

References

Details

Attachments

(2 files)

Attached file bugm4a.html

Open the attached testcase. Scroll down. Click 'toggle'. Pinch zoom in. Scroll around. Scrollbars are not correctly positioned.

UpdateScrollbarPosition should have been using scroll range and not scrolled rect for a long time. It didn't matter because we only used the top left of the rect which matched until bug 1654933 made GetScrollRangeForUserInputEvents return a rect that wasn't located at 0,0.

Pushed by tnikkel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7849377294cb Make ScrollFrameHelper::UpdateScrollbarPosition use the same calculation for scrollbar attributes as ScrollFrameHelper::ReflowFinished. r=kats
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: